--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <i class="fab fa-fort-awesome" routerLink="/"> HOME PAGE </i>
 
     <i class="fas fa-sign-in-alt loginButtons" *ngIf="!(isAuth | async)" (click)="signIn()"> SIGN IN</i>
-    <i class="fas fa-sign-out-alt loginButtons"  *ngIf="isAuth | async" (click)="signOut()"> SIGN OUT </i>
+    <i class="fas fa-sign-out-alt loginButtons" *ngIf="isAuth | async" (click)="signOut()"> SIGN OUT </i>
   </div>
 </div>
 {{userInfo | json}}
@@ -24,10 +24,10 @@
 </div>
 
 <div class="loginForm">
-  <form (ngSubmit)="loginUser(email.value, password.value)" *ngIf="isLoginClicked" #loginForm = "ngForm">
+  <form (ngSubmit)="loginUser(email.value, password.value)" *ngIf="isLoginClicked" #loginForm="ngForm">
     <input type="email" name="email" required ngModel #email="ngModel" placeholder="HR system email">
     <input type="password" name="password" required ngModel #password="ngModel" placeholder="HR system password">
-    <button class="btn" [disabled]="!loginForm.valid"> <span> LOGIN </span></button>
+    <button class="btn" [disabled]="!loginForm.valid"><span> LOGIN </span></button>
   </form>
   <div class="error" *ngIf="isErrorPresent">
     {{isErrorPresent}}
@@ -36,6 +36,9 @@
 
 <button class="btn" routerLink="/allbooks"> Show all books</button>
 <button class="btn" routerLink="/upload" *ngIf="isAuth">Add new book</button>
+<div *ngIf="userRole == 1">
+  <button routerLink="/statistic">To basic statistic page</button>
+</div>
 <br>
 
- <router-outlet></router-outlet>
+<router-outlet></router-outlet>
