--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -60,3 +60,15 @@
 .allComments {
   margin-bottom: 60px;
 }
+
+.admin-panel>button {
+  margin: 20px;
+  padding: 10px;
+  background-color: #eeeeee;
+}
+
+.active {
+  -webkit-box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
+  -moz-box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
+  box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
+}
