--- a/src/app/top-books/top-books.component.html
+++ b/src/app/top-books/top-books.component.html
@@ -1,4 +1,4 @@
-<div class="container" align="center">
+<div align="center">
   <br>
   <div class="books-header-text">
     <i class="fas fa-book"> TOP 5 BOOKS</i>
