--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,36 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="main">
-  <div style="text-align:left">
-    <h2 class="mainText" routerLink="/">
-      Welcome to {{title}}!
-    </h2>
-  </div>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+<div class="container">
+  <div class="main">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-  <div>
-    <i class="fab fa-fort-awesome" routerLink="/"> HOME PAGE </i>
-
+    <div routerLink="/" class="home-page-btn"></div>
     <i class="fas fa-sign-in-alt loginButtons" *ngIf="!(isAuth | async)" (click)="signIn()"> SIGN IN</i>
     <i class="fas fa-sign-out-alt loginButtons" *ngIf="isAuth | async" (click)="signOut()"> SIGN OUT </i>
+    <br>
+    <!--{{userInfo | json}}-->
+    <div class="fullSearch">
+      <form (ngSubmit)="search(word.value)">
+        <input type="text" name="word" ngModel #word="ngModel" placeholder="Search">
+        <i class="fas fa-search" (click)="search(word.value)"></i>
+      </form>
+    </div>
+
+    <div class="loginForm">
+      <form (ngSubmit)="loginUser(email.value, password.value)" *ngIf="isLoginClicked" #loginForm="ngForm">
+        <input type="email" name="email" required ngModel #email="ngModel" placeholder="HR system email">
+        <input type="password" name="password" required ngModel #password="ngModel" placeholder="HR system password">
+        <button class="btn" [disabled]="!loginForm.valid"><span> LOGIN </span></button>
+      </form>
+      <div class="error" *ngIf="isErrorPresent">
+        {{isErrorPresent}}
+      </div>
+    </div>
+
+    <button class="btn" routerLink="/"> Top Five</button>
+    <button class="btn" routerLink="/allbooks"> All Books</button>
+    <button class="btn" routerLink="/upload" *ngIf="isAuth">Add New Book</button>
+    <button class="btn" *ngIf="userRole == 1" routerLink="/statistic">To statistic page</button>
+    <br>
   </div>
+  <router-outlet></router-outlet>
 </div>
-{{userInfo | json}}
-<div class="fullSearch">
-  <form (ngSubmit)="search(word.value)">
-    <input type="text" name="word" ngModel #word="ngModel" placeholder="Search">
-    <i class="fas fa-search" (click)="search(word.value)"></i>
-  </form>
-</div>
-
-<div class="loginForm">
-  <form (ngSubmit)="loginUser(email.value, password.value)" *ngIf="isLoginClicked" #loginForm="ngForm">
-    <input type="email" name="email" required ngModel #email="ngModel" placeholder="HR system email">
-    <input type="password" name="password" required ngModel #password="ngModel" placeholder="HR system password">
-    <button class="btn" [disabled]="!loginForm.valid"><span> LOGIN </span></button>
-  </form>
-  <div class="error" *ngIf="isErrorPresent">
-    {{isErrorPresent}}
-  </div>
-</div>
-
-<button class="btn" routerLink="/allbooks"> Show all books</button>
-<button class="btn" routerLink="/upload" *ngIf="isAuth">Add new book</button>
-<div *ngIf="userRole == 1" class="admin-panel">
-  <button routerLink="/statistic">To basic statistic page</button>
-</div>
-<br>
-
-<router-outlet></router-outlet>
