--- a/src/app/all-books/all-books.component.html
+++ b/src/app/all-books/all-books.component.html
@@ -3,7 +3,9 @@
   <div class="books-header-text">
     <i class="fas fa-book"> All the books what we have</i>
   </div>
-  <br>
+  <div *ngFor="let page of pages" class="pagination">
+    <button (click)="changePage(page)">{{page}}</button>
+  </div>
   <div class="books-wrapper">
     <app-books
       *ngFor=" let book of books"
