--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,11 +1,12 @@
-<div class="book">
-  <span class="title"  routerLink='/book/{{id}}'>
+<div class="book" routerLink='/book/{{id}}'>
+  <span class="title">
     {{title}}
+    <i class="fas fa-book" *ngIf="!is_digital" style="float: right"></i>
   </span>
   <br>
   {{type_of_book}}
   <br>
-  <img src="{{image}}" alt="{{title}}" class="image"  routerLink='/book/{{id}}'>
+  <img src="{{image}}" alt="{{title}}" class="image">
   <div class="stars">
     {{avgStar}} star
     <br>
