--- a/src/app/upload-book/upload-book.component.html
+++ b/src/app/upload-book/upload-book.component.html
@@ -32,7 +32,7 @@
     <br>
 
     <label>*Type of book:</label>
-    <select style="display:inline-block;"
+    <select style="display:inline-block; height: 30px"
             required ngModel name="typeOfBook" #type="ngModel"
             (change)="changeBookType($event.target)">
       <option *ngFor="let type of types">
