--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,22 +27,26 @@
     </div>
 
     <!--TOP 5-->
-    <button class="btn" [ngClass]="{'clicked': clickedButtonNumber === 1}"
+    <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 1}"
             routerLink="/" (click)="mainButtonClick(1)"> Top Five
     </button>
     <!--ALL BOOKS-->
-    <button class="btn" [ngClass]="{'clicked': clickedButtonNumber === 2}"
+    <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 2}"
             routerLink="/allbooks" (click)="mainButtonClick(2)"> All Books
     </button>
     <!--ADD NEW BOOK-->
-    <button class="btn" [ngClass]="{'clicked': clickedButtonNumber === 3}"
+    <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 3}"
             routerLink="/upload" *ngIf="isAuth | async" (click)="mainButtonClick(3)">Add New Book
     </button>
     <!--STATISTIC (Just for admin)-->
-    <button class="btn" [ngClass]="{'clicked': clickedButtonNumber === 4}"
+    <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 4}"
             routerLink="/statistic" *ngIf="userRole == 1" (click)="mainButtonClick(4)">To statistic page
     </button>
-    <div *ngIf="clickedButtonNumber === 1">
+    <!--SUBJECTS (just for admin)-->
+    <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 5}"
+            routerLink="/subjects" *ngIf="userRole == 1" (click)="mainButtonClick(5)">Show subjects
+    </button>
+    <div *ngIf="(mainClicked | async) == 1">
       <button class="small-btn"
               [ngClass]="{'small-clicked': (whatTopClicked | async) === 'rating'|| !(whatTopClicked | async) }"
               (click)="topByRating()">Top 5 by rating</button>
@@ -55,5 +59,5 @@
     </div>
     <br>
   </div>
-  <router-outlet></router-outlet>
+  <router-outlet (click)="test()"></router-outlet>
 </div>
