--- a/src/app/upload-book/upload-book.component.css
+++ b/src/app/upload-book/upload-book.component.css
@@ -1,13 +1,22 @@
 .upload-form {
   width: 75%;
-  float: left;
+  /*float: left;*/
   font-weight: bold;
+  margin-top: 20px;
 }
 
 .upload-form label {
   color: #4a4b4c;
 }
 
-.upload-form .disabled {
-  color: red;
+.btn {
+  margin-right: 20px;
+  background-color: #78b8fc;
+  color: black;
+  font-weight: bold;
+  border: 0px;
+}
+textarea {
+  border: 0px;
+  border-bottom: 1px solid #9e9e9e;
 }
