--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,4 +1,4 @@
-<div class="book" routerLink='/book/{{id}}'>
+<div class="book" routerLink='/book/{{id}}' (click)="ckc()">
   <i class="fas fa-book" *ngIf="!is_digital">
     <span class="tooltiptext">Handbook</span>
   </i>
