--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,23 +28,23 @@
 
     <!--TOP 5-->
     <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 1}"
-            routerLink="/" (click)="mainButtonClick(1)"> Top Five
+            routerLink="/" *ngIf="!(isBlocked | async)" (click)="mainButtonClick(1)"> Top Five
     </button>
     <!--ALL BOOKS-->
     <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 2}"
-            routerLink="/allbooks" (click)="mainButtonClick(2)"> All Books
+            routerLink="/allbooks" *ngIf="!(isBlocked | async)" (click)="mainButtonClick(2)"> All Books
     </button>
     <!--ADD NEW BOOK-->
     <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 3}"
-            routerLink="/upload" *ngIf="isAuth | async" (click)="mainButtonClick(3)">Add New Book
+            routerLink="/upload" *ngIf="!(isBlocked | async) && (isAuth | async)" (click)="mainButtonClick(3)">Add New Book
     </button>
     <!--STATISTIC (Just for admin)-->
     <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 4}"
-            routerLink="/statistic" *ngIf="userRole == 1" (click)="mainButtonClick(4)">To statistic page
+            routerLink="/statistic" *ngIf="isAdmin | async" (click)="mainButtonClick(4)">To statistic page
     </button>
     <!--SUBJECTS (just for admin)-->
     <button class="btn" [ngClass]="{'clicked': (mainClicked | async) == 5}"
-            routerLink="/subjects" *ngIf="userRole == 1" (click)="mainButtonClick(5)">Show subjects
+            routerLink="/subjects" *ngIf="isAdmin | async" (click)="mainButtonClick(5)">Show subjects
     </button>
     <div *ngIf="(mainClicked | async) == 1">
       <button class="small-btn"
@@ -59,5 +59,9 @@
     </div>
     <br>
   </div>
-  <router-outlet (click)="test()"></router-outlet>
+  <router-outlet *ngIf="!(isBlocked | async)"></router-outlet>
+
+  <div *ngIf="(isBlocked | async) && (isAuth | async)">
+    NO NO NO
+  </div>
 </div>
