Add pagination. Fix a lot of bugs

--- a/src/app/all-books/all-books.component.html
+++ b/src/app/all-books/all-books.component.html
@@ -7,9 +7,9 @@
     <button (click)="changePage(page)">{{page}}</button>
   </div>
   <div class="books-wrapper">
-    <app-books
+    <app-small-book
       *ngFor=" let book of books"
       [book]="book"
-    ></app-books>
+    ></app-small-book>
   </div>
 </div>
