--- a/src/app/all-books/all-books.component.css
+++ b/src/app/all-books/all-books.component.css
@@ -1,7 +1,7 @@
 .books-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
