--- a/src/app/word-search/word-search.component.html
+++ b/src/app/word-search/word-search.component.html
@@ -5,9 +5,9 @@
   </div>
   <br>
   <div class="books-wrapper">
-    <app-books
+    <app-small-book
       *ngFor=" let book of books"
       [book]="book"
-    ></app-books>
+    ></app-small-book>
   </div>
 </div>
